# MkStudio

./: .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  TODO.md  branding.conf  optimize.md  update.sh
charon/: Cargo.toml  README.md
charon/src/: lib.rs  main.rs
crates/luxifer-core/: Cargo.toml
crates/luxifer-core/src/: geometry.rs  lib.rs  model.rs  state.rs
docs/: native_function_matrix.md  native_only_migration_tasks.md  native_todo_bedienung.md  thorburn-canvas-analyse.md
docs/adr/: 0001-treiber-abstraktion.md  0002-panel-system.md  0003-gui-gestaltung.md  0003-projektformat.md  0004-asset-store-und-bild-import.md  0004-mehrfachauswahl-anordnen.md  0005-farbe-am-objekt.md  0005-laser-preview.md  0006-ruida-treiber.md  0008-render-architektur-gpu.md  0009-design-canvas-webgl-only.md  0010-nativer-renderer-wgpu.md  0012-charon-lokaler-handshake.md  0014-bildvorschau-vektorisieren-und-zuschneiden.md  0016-trim-werkzeug.md  0018-konfigurierbare-tastaturkuerzel.md  0019-materialrezepte-fuer-laserlayer.md  0020-benannte-werkstueck-nullpunkte.md  0021-zusatzachsen-z-u-und-rotary.md  0022-rotary-bauarten-und-achsenkalibrierung.md  0023-rotary-gravur.md  0024-grblhal-transport-und-protokollgrenze.md
docs/referenz/: 01-thorburn-analyse.md  02-funktions-worksheet.md
hub/src/: lib.rs
luxifer/application/: Cargo.toml
luxifer/application/src/: assets.rs  catalog_sync.rs  charon.rs  laser.rs  lib.rs  materials.rs  project.rs  session.rs  sync_inbox.rs
luxifer/application/src/laser/: tests.rs
luxifer/application/src/project/: tests.rs
luxifer/application/src/session/: actions.rs  drawing.rs  layers.rs  preview.rs  selection.rs  tests.rs
luxifer/core/: Cargo.toml
luxifer/core/examples/: pf_check.rs
luxifer/core/src/: arrange.rs  assets.rs  datetime.rs  dither.rs  geo_ops.rs  geometry.rs  import.rs  interact.rs  job.rs  laser.rs  lib.rs  materials.rs  model.rs  nesting.rs  pattern_fill.rs  preview.rs  project.rs  raster.rs  scanline.rs  shapes.rs  state.rs  text.rs  trace.rs  trim.rs  ui_settings.rs
luxifer/core/src/geo_ops/: apply.rs  mod.rs
luxifer/core/src/state/: edit.rs  layers.rs  mod.rs  shapes.rs
luxifer/drivers/grbl/: Cargo.toml
luxifer/drivers/grbl/src/: lib.rs
luxifer/drivers/ruida/: Cargo.toml
luxifer/drivers/ruida/src/: lib.rs  protocol.rs  settings.rs
luxifer/frontend/: dev.sh
luxifer/frontend/public/: splash.html
luxifer/frontend/src/: App.svelte
luxifer/frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
luxifer/frontend/src-tauri/icons/: icon.icns
luxifer/frontend/src-tauri/src/: lib.rs  shared.rs
luxifer/frontend/src-tauri/src/commands/: edit.rs  image.rs  laser.rs  mod.rs  project.rs  shapes.rs
luxifer/frontend/src/lib/: ArrangePanel.svelte  Canvas.svelte  EditFlyout.svelte  GeoToolDialog.svelte  ImageEditor.svelte  LaserPanel.svelte  LayersPanel.svelte  PanelHost.svelte  PreviewCanvas.svelte  ProjectBrowser.svelte  SettingsModal.svelte  ShapesPanel.svelte  TextDialog.svelte  ToolsPanel.svelte  core.ts
luxifer/frontend/src/lib/canvas/: bezier-draft.ts  handles.ts
luxifer/frontend/src/lib/gl/: camera.ts  preview-render.ts  renderer.ts
luxifer/native/: Cargo.toml  README.md  build.rs
luxifer/native/src/: app.rs  gpu.rs  icons.rs  image_gpu.rs  laserpanel.rs  main.rs  scene_geo.rs  tools.rs  ui.rs
luxifer/native/src/app/: charon.rs  editor.rs  image.rs  laser.rs  laser_manager.rs  materials.rs  project.rs  settings.rs  text.rs
luxifer/native/src/canvas/: gestures.rs  input.rs  mod.rs  overlay.rs  scene.rs  state.rs
luxifer/native/src/render/: mod.rs
luxifer/native/src/ui/: action.rs  arrange.rs  layers.rs  mod.rs  project.rs  ruler.rs  state.rs  status.rs  toast.rs  tools.rs  topbar.rs
luxifer/native/src/ui/dialogs/: geo_op.rs  guard.rs  image.rs  laser_manager.rs  layer.rs  layer_manager.rs  mod.rs  project_save.rs  revision_compare.rs  settings.rs  text.rs
luxifer/src/LuxiFer.App/: App.axaml  App.axaml.cs  LuxiFer.App.csproj  Program.cs  ViewLocator.cs
luxifer/src/LuxiFer.App/Controls/: CanvasControl.cs  LaserPanel.axaml  LayerPanel.axaml  LayerPanel.axaml.cs
luxifer/src/LuxiFer.App/Themes/: Icons.axaml  Styles.axaml  Tokens.axaml
luxifer/src/LuxiFer.App/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
luxifer/src/LuxiFer.App/Views/: MainWindow.axaml  MainWindow.axaml.cs
luxifer/src/LuxiFer.Core/Canvas/: Arrange.cs  CanvasDocument.cs  Shapes.cs
luxifer/src/LuxiFer.Core/Undo/: CanvasCommands.cs
luxifer/tests/LuxiFer.Core.Tests/: ShapeTests.cs
scripts/: build-appimage.sh  install-charon.sh
sharon/: rustfmt.toml
sharon/crates/sharon-core/src/: session.rs
studio/application/: Cargo.toml
studio/application/src/: hub.rs  laser.rs  lib.rs
studio/application/src/laser/: tests.rs
studio/application/src/session/: actions.rs  tests.rs
studio/core/: build.rs
studio/core/src/: branding.rs  job.rs  laser.rs  lib.rs  rotary.rs
studio/core/src/geo_ops/: apply.rs  mod.rs
studio/drivers/grbl/src/: lib.rs  protocol.rs  transport.rs
studio/drivers/ruida/src/: lib.rs
studio/native/: Cargo.toml
studio/native/src/: app.rs  laserpanel.rs  main.rs  tools.rs
studio/native/src/app/: editor.rs  laser.rs  laser_manager.rs
studio/native/src/canvas/: gestures.rs  overlay.rs  state.rs
studio/native/src/ui/: action.rs  mod.rs  state.rs  tools.rs
studio/native/src/ui/dialogs/: geo_op.rs  laser_manager.rs  mod.rs  rotary.rs  settings.rs
studio/serial/: Cargo.toml
studio/serial/src/: lib.rs
