# LuxiFer — Cargo-Workspace (Core + Application + Native + Charon)
#
# Der Core ist die einzige Quelle der Wahrheit für Geometrie, Layer/Farbe,
# Projektformat und Job-Kompilierung. Application koordiniert die Anwendungsfälle;
# Native zeichnet und verarbeitet Eingaben. Charon bleibt optional.
[workspace]
resolver = "2"
members = [
    "luxifer/core",
    "luxifer/application",
    "luxifer/native",
    "luxifer/drivers/grbl",
    "luxifer/drivers/ruida",
    "charon",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["moshy"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Bild-Dekodierung/Graustufe (ADR 0004). Nur die benoetigten Formate, um die
# Dependency schlank zu halten (kein GIF/TIFF/… und keine Default-Features).
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "bmp",
    "webp",
] }
# Boolesche Polygon-Operationen (Vereinigen/Schneiden/Abziehen). Erprobte
# Bibliothek statt handgerollter Schnittpunkt-Topologie (v3s 377-Zeilen-
# Greiner-Hormann war ein Kantenfall-Minenfeld).
i_overlay = "7"
# Polylinien-Offset (parallele Kontur) — CAM-Standardbibliothek; dieselbe
# Wahl hatte v3 für seinen Offset getroffen.
cavalier_contours = "0.7"
# Font-Parsing für Text→Pfad (Glyph-Outlines); dieselbe Wahl wie v3.
ttf-parser = "0.25"
# Vektor-Import: SVG (usvg flacht Transformationen/Formen zu Pfaden ab)
# und DXF — dieselben Bibliothekswahlen wie v3.
usvg = { version = "0.47", default-features = false }
dxf = "0.6"
