[package]
name = "charon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Charon — optionaler Koordinations-Server für LuxiFer."

[dependencies]
luxifer-core = { path = "../luxifer/core" }
serde = { workspace = true }
serde_json = { workspace = true }
