[package]
name = "charon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Charon — optionaler Koordinations-Server für LuxiFer."

[dependencies]
luxifer-core = { path = "../luxifer/core" }
serde = { workspace = true }
serde_json = { workspace = true }
