[package]
name = "luxifer-application"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "UI-unabhängige Anwendungsschicht für LuxiFer."

[dependencies]
luxifer-core = { path = "../core" }
luxifer-driver-ruida = { path = "../drivers/ruida" }
luxifer-driver-grbl = { path = "../drivers/grbl" }

