[package]
name = "luxifer-application"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "UI-unabhängige Anwendungsschicht für LuxiFer."

[dependencies]
luxifer-core = { path = "../core" }
luxifer-driver-ruida = { path = "../drivers/ruida" }
luxifer-driver-grbl = { path = "../drivers/grbl" }
serde = { workspace = true }
serde_json = { workspace = true }
image = { workspace = true }
