[package]
name = "luxifer-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Kern von LuxiFer: Datenmodell, Geometrie, Layer/Farbe, Undo. UI-frei."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
image = { workspace = true }
i_overlay = { workspace = true }
cavalier_contours = { workspace = true }
ttf-parser = { workspace = true }
