[package]
name = "studio-application"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "UI-unabhängige Anwendungsschicht für Studio."

[dependencies]
studio-core = { path = "../core" }
driver-ruida = { path = "../drivers/ruida" }
driver-grbl = { path = "../drivers/grbl" }
studio-serial = { path = "../serial" }
serde = { workspace = true }
serde_json = { workspace = true }
image = { workspace = true }
