[package]
name = "luxifer-app"
version = "0.1.0"
edition = "2021"
description = "LuxiFer — Tauri-Backend (bindet luxifer-core an)"

[lib]
name = "luxifer_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
luxifer-core = { path = "../../core" }
luxifer-driver-grbl = { path = "../../drivers/grbl" }
luxifer-driver-ruida = { path = "../../drivers/ruida" }

# Dev-Build spuerbar beschleunigen, ohne die Debug-Erfahrung zu opfern:
# Abhaengigkeiten (Serde, Tauri, luxifer-core) voll optimieren, den eigenen
# Backend-Code leicht. Das macht die Command-Roundtrips (Serialisierung der
# Scene) im Dev-Modus deutlich fluessiger.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
